; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Server.c_SiLoadListenerCfg.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Server.c_SiLoadListenerCfg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"Enabled\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"Port\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"DisableDos\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SiLoadListenerCfg(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %10, %2
  br label %30

14:                                               ; preds = %10
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @CfgGetBool(i32* %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i32 %16, i32* %5, align 4
  %17 = load i32*, i32** %4, align 8
  %18 = call i64 @CfgGetInt(i32* %17, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  store i64 %18, i64* %6, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @CfgGetBool(i32* %19, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  store i32 %20, i32* %7, align 4
  %21 = load i64, i64* %6, align 8
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %14
  br label %30

24:                                               ; preds = %14
  %25 = load i32*, i32** %3, align 8
  %26 = load i64, i64* %6, align 8
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @SiAddListenerEx(i32* %25, i64 %26, i32 %27, i32 %28)
  br label %30

30:                                               ; preds = %24, %23, %13
  ret void
}

declare dso_local i32 @CfgGetBool(i32*, i8*) #1

declare dso_local i64 @CfgGetInt(i32*, i8*) #1

declare dso_local i32 @SiAddListenerEx(i32*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
